--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ a:active,a:hover {
 h1 {
 	font-size:2em;
 	margin:0.67em 0;
-	color:#353535;
+	color:#474747;
 }
 h2 {
 	font-size:1.5em;
@@ -453,7 +453,7 @@ table {
 }
 /* ==========================================================================Hero========================================================================== */
 .hero {
-	background: url('../img/header-bg2.jpg') right bottom no-repeat;
+	background: url('../img/header-bg5.jpg') right bottom no-repeat;
 	background-size: contain;
 	padding:110px 0 100px 0;
 	height:auto;
@@ -480,6 +480,7 @@ table {
 	letter-spacing: 18px;
 	line-height: 50px;
 	text-transform: uppercase;
+	font-weight: semi-condensed;
 }
 .hero p {
 	letter-spacing:1px;
