--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ audio,canvas,video {
 	*display:inline;
 	*zoom: 1;
 }
-* Remove excess height in iOS 5 devices. */
+/* Remove excess height in iOS 5 devices. */
 audio:not([controls]) {
 	display:none;
 	height:0;
@@ -1110,19 +1110,19 @@ ul.slides li {
 }
 /* ==========================================================================Responsive========================================================================== */
 /* 320px (iPhone) */
-@media screen and (max-width:414px) {
+@media screen and (max-width:1147px) {
 	.scrollto {
 		padding: 95px 0px 0px 0px;
 	}
 
 	.hero h1 {
-		font-size: 100px;
+		font-size: 9vw;
 		line-height: 80px;
 		margin-top: 65px;
 }
 }
 /* 480px (WVGA - Low End Windows Phone) */
-@media screen and (max-width:480px) {
+@media screen and (max-width:1147px) {
 	.wrapper {
 		background:#f3f5f8;
 		height:640px;
@@ -1134,7 +1134,7 @@ ul.slides li {
 		display:none;
 	}
 	.wp2,.wp4,.wp5,.light-box {
-		margin-bottom: 30px;
+		margin-bottom: 30px;    
 	}
 }
 /* xGA iPad */
