--- a/css/style.css
+++ b/css/style.css
@@ -451,7 +451,7 @@ table {
 }
 /* ==========================================================================Hero========================================================================== */
 .hero {
-	background: url('../img/header-bg6.jpg') right bottom no-repeat;
+	background: url('../img/head1.jpg') right bottom no-repeat;
 	background-size: contain;
 	padding:110px 0 100px 0;
 	height:auto;
