--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,8 @@ section {
 }
 
 .about, .skills,
-.publications, .projects {
+.publications, .projects,
+.contact, footer {
     font-family: 'Poppins', sans-serif;
     color: #fff;
     line-height: 2;
@@ -118,7 +119,8 @@ section {
 }
 
 .about .title, .skills .title,
-.publications .title, .projects .title {
+.publications .title, .projects .title,
+.contact .title {
     position: relative;
     text-align: center;
     font-size: 40px;
@@ -131,6 +133,7 @@ section {
 /* about section styling  */
 
 .about .about-content p {
+    font-size: 18px;
     text-align: justify;
 }
 
@@ -202,6 +205,148 @@ section {
     /* height: 720px;
     width: 1280px; */
     object-fit: cover;
+}
+
+/* contact section styling */
+
+.contact .contact-content {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.contact .contact-content .column {
+    width: calc(50% - 30px);
+}
+
+.contact .contact-content .text {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.contact .contact-content .left {
+    width: calc(50% - 30px);
+}
+
+.contact .contact-content .left .icons {
+    margin: 10px 0;
+}
+
+.contact .contact-content .row {
+    display: flex;
+    height: 65px;
+    margin-bottom: 40px;
+    align-items: center;
+}
+
+.contact .contact-content .row .info {
+    margin-left: 30px;
+    line-height: 1.75;
+}
+
+.contact .contact-content .row i {
+    font-size: 25px;
+    color: #67accf;
+}
+
+.contact .contact-content .info .head {
+    font-weight: 500;
+}
+
+.contact .contact-content .info .sub-title {
+    color: rgb(206, 206, 206);
+}
+
+.contact .right form .fields {
+    display: flex;
+}
+
+.contact .right form .field,
+.contact .right form .fields .field {
+    height: 45px;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.contact .right form .textarea {
+    height: 80px;
+    width: 100%;
+}
+
+.contact .right form .name {
+    margin-right: 10px;
+}
+
+.contact .right form .email {
+    margin-left: 10px;
+}
+
+.contact .right form .field input,
+.contact .right form .textarea textarea {
+    height: 100%;
+    width: 100%;
+    background-color: #00000000;
+    border: 1px solid #3c535e;
+    color: #fff;
+    border-radius: 6px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 17px;
+    font-family: 'Poppins', sans-serif  ;
+}
+
+.contact .right form .textarea textarea {
+    padding-top: 10px;
+    resize: none;
+}
+
+.contact .right form .button {
+    height: 47px;
+    width: 180px;
+}
+
+.contact .right form .button button {
+    width: 100%;
+    height: 100%;
+    border: 2px solid #67accf;
+    background: #67accf;
+    color: #000;
+    font-size: 20px;
+    font-weight: 500;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.contact .right form .button button:hover {
+    color: #67accf;
+    background: none;
+}
+
+/* footer section styling */
+
+footer {
+    font-size: 14px;
+    background: #111618;
+    padding: 20px 23px;
+}
+
+footer .social {
+    float: right;
+}
+
+footer .social i {
+    padding: 0 10px;
+}
+
+footer .social a {
+    color: #5a7d8d;
+}
+
+footer .social a:hover {
+    color: #67accf;
 }
 
 /* custom scroll bar */
@@ -284,6 +429,11 @@ section {
 
     .skills-table {
         font-size: 14px;
+    }
+
+    .contact .contact-content .column {
+        width: 100%;
+        margin-bottom: 35px;
     }
 }
 
