Added other projects section

--- a/css/style.css
+++ b/css/style.css
@@ -154,9 +154,14 @@ section {
 
 /* about section styling  */
 
+.about .about-content {
+    text-align: center;
+    line-height: 2.25;
+}
+
 .about .about-content p {
     font-size: 18px;
-    text-align: justify;
+    text-align: center;
 }
 
 .about .about-content a {
@@ -188,6 +193,10 @@ section {
 
 .skills-content::-webkit-scrollbar {
     height: 8px;
+}
+
+.skills-content::-webkit-scrollbar-track {
+    background-color: #00000080;
 }
 
 .skills-table {
@@ -270,6 +279,32 @@ section {
 .projects .projects-content .item .right a:hover {
     color: #67accf;
     background: none;
+}
+
+.projects-table {
+    padding: 20px 0px;
+    text-align: left;
+}
+
+
+.projects-table td {
+    padding: 20px 0px;
+}
+
+.projects-table td a {
+    color: #67accf;
+}
+
+.projects-table td a:hover {
+    font-weight: 500;
+    color: #000;
+    background: #67accf;
+}
+
+.projects-table th {
+    padding-right: 50px;
+    width: 30%;
+    font-weight: 900;
 }
 
 /* contact section styling */
@@ -381,7 +416,7 @@ section {
     height: 100%;
     border: 2px solid #67accf;
     background: #67accf;
-    color: #000;
+    color: #fff;
     font-size: 20px;
     font-weight: 500;
     border-radius: 6px;
@@ -439,10 +474,6 @@ footer .social a:hover {
 
 ::-webkit-scrollbar-corner {
     background: #00000000;
-}
-
-.skills-table::-webkit-scrollbar {
-    background: black;
 }
 
 /* responsive media queries */
