--- a/css/style.css
+++ b/css/style.css
@@ -588,6 +588,10 @@ footer .social a:hover {
     font-size: 35px;
   }
 
+  .home .home-content .text-2 .name {
+    font-size: 35px;
+  }
+
   .skills-table {
     font-size: 14px;
   }
