--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,89 @@ footer {
   color: #91add3;
 }
 
+/* skills animation */
+
+.skill-container {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.skill-category {
+  display: flex;
+  padding: 10px 20px;
+  font-weight: 900;
+  background: rgba(107, 128, 156, 0.104);
+  box-shadow: 10px 0px 10px -8px rgba(0, 0, 0, 0.35);
+  color: #91add3;
+  white-space: nowrap;
+  width: 140px;
+}
+
+.category-text {
+  margin: auto;
+}
+
+.skill-strip {
+  background: rgba(107, 128, 156, 0.104);
+  width: 100%;
+  padding: 10px 0;
+}
+
+.skill-span {
+  padding-right: 24px;
+}
+
+.skill-span i {
+  font-size: 20px;
+  padding-right: 8px;
+}
+
+.marquee-container {
+  margin: auto;
+  flex: auto;
+  height: 30px;
+  overflow: hidden;
+  line-height: 2.1;
+  position: relative;
+  display: block;
+
+  .marquee {
+    top: 0;
+    width: 100%;
+    overflow: hidden;
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    white-space: nowrap;
+  }
+
+  .marquee.first {
+    left: 0%;
+  }
+
+  .marquee.second {
+    left: 100%;
+  }
+}
+
+@keyframes marquee-first {
+  0% {
+    left: 0%;
+  }
+  100% {
+    left: -100%;
+  }
+}
+
+@keyframes marquee-second {
+  0% {
+    left: 100%;
+  }
+  100% {
+    left: 0%;
+  }
+}
+
 /* skills section styling */
 
 .skills-content {
@@ -721,6 +804,18 @@ footer .social a:hover {
   }
 }
 
+@media (max-width: 740px) {
+  .skill-container {
+    flex-direction: column;
+  }
+
+  .skill-category {
+    text-align: center;
+    width: 100%;
+    box-shadow: 0px 10px 10px -8px rgba(0, 0, 0, 0.35);
+  }
+}
+
 @media (max-width: 620px) {
   .max-width {
     padding: 0 32px;
@@ -769,6 +864,15 @@ footer .social a:hover {
   .skills-table th,
   .skills-table td {
     padding: 0 40px 0 0;
+  }
+
+  .skill-category {
+    background: transparent;
+    text-align: left;
+  }
+
+  .category-text {
+    margin: 0;
   }
 
   .pubs-content {
