--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body {
   background-attachment: scroll;
 }
 
+body.no-scroll {
+  overflow-y: hidden;
+}
+
 .container {
   background: linear-gradient(
     135deg,
@@ -116,6 +120,7 @@ body {
   font-size: 23px;
   cursor: pointer;
   display: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .scroll-up-btn {
@@ -127,12 +132,13 @@ body {
   text-align: center;
   font-size: 50px;
   line-height: 45px;
-  z-index: 9999;
+  z-index: 998;
   cursor: pointer;
   color: #fff;
   opacity: 0;
   pointer-events: none;
   transition: all 0.3s ease;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .scroll-up-btn.show {
@@ -706,13 +712,21 @@ footer .social a:hover {
 
   .navbar .menu {
     position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     height: 100vh;
     width: 100%;
     left: -100%;
     top: 0;
-    background: #111;
+    background: linear-gradient(
+      135deg,
+      rgb(17, 24, 34) 0%,
+      rgb(31, 40, 53) 50%,
+      rgb(19, 27, 34) 100%
+    );
     text-align: center;
-    padding-top: 80px;
+    padding: 80px;
     transition: all 0.3s ease;
   }
 
@@ -721,13 +735,27 @@ footer .social a:hover {
   }
 
   .navbar .menu li {
+    user-select: none;
     display: block;
+    /* padding: 24px; */
+    /* box-shadow: 0px 8px 8px -8px rgba(71, 90, 118, 0.508); */
+    border-bottom: 1px solid rgba(107, 128, 156, 0.4);
+  }
+
+  .navbar .menu li:first-child {
+    /* margin-top: 24px; */
+  }
+
+  .navbar .menu li:last-child {
+    border-bottom: none;
+    margin-bottom: 80px;
   }
 
   .navbar .menu li a {
     display: inline-block;
     margin: 20px 0;
     font-size: 25px;
+    -webkit-tap-highlight-color: transparent;
   }
 
   .home .home-content .text-2 {
