--- a/css/style.css
+++ b/css/style.css
@@ -718,6 +718,7 @@ footer .social a:hover {
 
   .menu-btn i.active::before {
     content: "\f00d";
+    margin-right: 8px;
   }
 
   .navbar .menu {
@@ -763,7 +764,8 @@ footer .social a:hover {
 
   .navbar .menu li a {
     display: inline-block;
-    margin: 20px 0;
+    padding: 20px 0px;
+    margin: 0;
     font-size: 25px;
     -webkit-tap-highlight-color: transparent;
   }
