--- a/css/style.css
+++ b/css/style.css
@@ -718,7 +718,6 @@ footer .social a:hover {
 
   .menu-btn i.active::before {
     content: "\f00d";
-    margin-right: 8px;
   }
 
   .navbar .menu {
@@ -765,6 +764,7 @@ footer .social a:hover {
   .navbar .menu li a {
     display: inline-block;
     padding: 20px 0px;
+    width: 100%;
     margin: 0;
     font-size: 25px;
     -webkit-tap-highlight-color: transparent;
