--- a/css/style.css
+++ b/css/style.css
@@ -736,7 +736,7 @@ footer .social a:hover {
       rgb(19, 27, 34) 100%
     );
     text-align: center;
-    padding: 80px;
+    padding: 80px 40px;
     transition: all 0.3s ease;
   }
 
